--- a/src/modules/dashboard/components/ActionsPage/FinalizeMotionAndClaimWidget/FinalizeMotionAndClaimWidget.css
+++ b/src/modules/dashboard/components/ActionsPage/FinalizeMotionAndClaimWidget/FinalizeMotionAndClaimWidget.css
@@ -30,6 +30,10 @@
   color: var(--dark);
 }
 
+.itemWithForcedBorder .helpIcon {
+  padding-top: 5px;
+}
+
 .title {
   composes: item;
 }
